--- a/scss/main.css
+++ b/scss/main.css
@@ -11,7 +11,40 @@ img {
      object-fit: cover;
   vertical-align: middle;
 }
+/* styles.css */
 
+/* Pagination container styles */
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+/* Pagination button styles */
+.pagination button {
+  padding: 8px 12px;
+  margin: 0 5px;
+  font-size: 16px;
+  background-color: #f0f0f0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.pagination button:hover {
+  background-color: #ddd;
+}
+
+.pagination button:focus {
+  outline: none;
+}
+
+/* Active page button styles */
+.pagination button.active {
+  background-color: #007bff;
+  color: #fff;
+  border-color: #007bff;
+}
 body {
   overflow-x: hidden;
 }
@@ -48,6 +81,45 @@ nav {
   flex-wrap: wrap;
   gap: 24px;
 }
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+  
+    .card {
+      width: 300px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      overflow: hidden;
+    }
+  
+    .card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px 10px 0 0;
+    }
+  
+    .card-body {
+      padding: 15px;
+    }
+  
+    .card-title {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+  
+    .card-text {
+      font-size: 14px;
+      color: #555;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      /* Show up to 2 lines */
+      -webkit-box-orient: vertical;
+    }
 .nav__list--item a {
   font-family: "Inter";
   font-style: normal;
